# auction-concordium-contracts

./: .gitignore  Cargo.toml  auction.wasm.v1  auction2.wasm.v1  auction3.wasm.v1  auction4.wasm.v1  back.txt  contract.wasm.v1
concordium-out/: auction_schema.json  module-schema.bs64  module.wasm.v1
deploy-scripts/: Cargo.toml
deploy-scripts/src/: main.rs
src/: lib.rs
tests/: auctionv1.wasm.v1  tests.rs
