[package]
name = "auction"
version = "0.1.0"
authors = ["BroodCaster"]
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["std", "bump_alloc"]
std = ["concordium-std/std"]
bump_alloc = ["concordium-std/bump_alloc"]

[dependencies]
concordium-std = { version = "10.1.0", default-features = false }

[dev-dependencies]
concordium-smart-contract-testing = { version = "4.3" }
concordium-std-derive = { version = "6.0" }

[lib]
crate-type=["cdylib", "rlib"]